<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:orientation="vertical">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/ivGif"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:background="@color/gifColor"
        android:src="@drawable/onboarding" />

    <LinearLayout
        android:id="@+id/llOnBoardingDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/space_20"
        android:gravity="center"
        android:layout_weight="0.9"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/tvOnBoardingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_26"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/grey800"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOnBoardingDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_40"
            android:paddingStart="@dimen/space_12"
            android:paddingEnd="@dimen/space_12"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/grey700"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_64"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvSkip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_8"
                android:layout_weight="1"
                android:background="@drawable/rounded_border_primary_400"
                android:paddingTop="@dimen/space_11"
                android:paddingBottom="@dimen/space_11"
                android:text="@string/skip"
                android:textAlignment="center"
                android:textColor="@color/primary400"
                android:textFontWeight="500"
                android:textSize="20sp"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/tvNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_primary_900"
                android:paddingTop="@dimen/space_11"
                android:paddingBottom="@dimen/space_11"
                android:text="@string/next"
                android:textAlignment="center"
                android:textColor="@color/primary50"
                android:textFontWeight="500"
                android:textSize="20sp"
                tools:targetApi="p" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>