<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sevensec.activities.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/material_blue_grey_800"
            android:dividerHeight="@dimen/divider_height"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_30"
            android:paddingEnd="@dimen/space_30"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/permission" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_required"
                android:textColor="@color/grey800"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/permission_description"
                android:textAlignment="center"
                android:textColor="@color/grey800"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:background="@drawable/blue_btn"
                android:text="@string/grant_permission"
                android:textColor="@color/white"
                android:theme="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_30"
            android:paddingEnd="@dimen/space_30"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/no_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data_found"
                android:textColor="@color/grey800"
                android:textSize="30sp"
                android:layout_marginStart="@dimen/space_16"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>