<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/space_32"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey200" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_12"
                    android:src="@drawable/ic_login" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:layout_toRightOf="@+id/iv_login"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_12"
                    android:src="@drawable/ic_arrow" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_switch_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey200" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_switch_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_12"
                    android:layout_marginTop="@dimen/space_12"
                    android:layout_marginEnd="@dimen/space_12"
                    android:layout_marginBottom="@dimen/space_12"
                    android:src="@drawable/ic_switch_delay" />

                <TextView
                    android:id="@+id/tv_switch_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:layout_toRightOf="@+id/iv_switch_delay"
                    android:text="@string/select_app_switch_delay"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_12"
                    android:src="@drawable/ic_arrow" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_breathing_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey200" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_breathing_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_12"
                    android:layout_marginTop="@dimen/space_12"
                    android:layout_marginEnd="@dimen/space_12"
                    android:layout_marginBottom="@dimen/space_12"
                    android:src="@drawable/ic_breathing_timer" />

                <TextView
                    android:id="@+id/tv_breathing_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:layout_toRightOf="@+id/iv_breathing_timer"
                    android:text="@string/select_breathing_timer"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_12"
                    android:src="@drawable/ic_arrow" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey200" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_12"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:layout_toRightOf="@+id/iv_share"
                    android:text="@string/share_app"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_12"
                    android:src="@drawable/ic_arrow" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey200" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/space_32"
                android:layout_marginEnd="@dimen/space_32"
                android:layout_marginBottom="@dimen/space_32"
                android:background="@drawable/rounded_corner_primary_900"
                android:paddingTop="@dimen/space_12"
                android:paddingBottom="@dimen/space_12"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:targetApi="p" />

        </RelativeLayout>

    </LinearLayout>
</layout>